--- a/requirements.txt
+++ b/requirements.txt
@@ -7,5 +7,10 @@ streamlit==1.25.0
 transformers==4.31.0
 sentencepiece==0.1.99
 gitpython==3.1.32
-torch-scatter==1.13.0
-torch==1.13.0
+torch-geometric==2.1.0
+-f https://data.pyg.org/whl/torch-1.12.1+cpu.html 
+torch==1.12.1
+torch-scatter==2.0.9
+-f https://data.pyg.org/whl/torch-1.12.1+cpu.html 4
+torch-sparse==0.6.16
+torchvision==0.13.0
